feat: updated template to include NSQ example
